# repo-synthesizer-ai-prompt

./: Cargo.toml  README.md
src/: formatter.rs  main.rs  validator.rs
src/config/: config_file_manager.rs  default_config.json  mod.rs
src/parser/: args.rs
