[package]
name = "repo-synthesizer-ai-prompt"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Spijkerman <nicospijke@gmail.com>"]
license = "MIT"
description = "TODO"

[[bin]]
path = "src/main.rs"
name = "synt"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.134"
directories = "5.0.1"
walkdir = "2.5.0"
