[package]
name = "repo-synthesizer-ai-prompt"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Spijkerman <nicospijke@gmail.com>"]
license = "MIT"
description = "A command-line tool that aggregates and formats repository content for AI prompts.\nIt walks through directories, collecting file contents while respecting ignore patterns, and outputs a formatted synthesis suitable for use in AI interactions."

[[bin]]
path = "src/main.rs"
name = "synt"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.134"
directories = "5.0.1"
walkdir = "2.5.0"
